bookmedik-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookmedik-deployment
  labels:
    app: bookmedik
    type: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bookmedik
      type: frontend
  template:
    metadata:
      labels:
        app: bookmedik
        type: frontend
    spec:
      containers:
        - name: contenedor-bookmedik
          image: felgts/bookmedik:v2
          ports:
            - containerPort: 80
              name: http-port
