bookmedik-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: bookmedik-service
  labels:
    app: bookmedik
    type: frontend
spec:
  selector:
    app: bookmedik
    type: frontend
  ports:
  - name: http-sv-port
    port: 8080
    targetPort: http-port
  type: NodePort
