bookmedik-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bookmedik-ingress
  labels:
    app: bookmedik
    type: frontend
spec:
  rules:
  - host: bookmedik.felipe.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bookmedik-service
            port:
              name: http-sv-port
